--- a/front/html/cadastro_turma.html
+++ b/front/html/cadastro_turma.html
@@ -5,18 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Turmas</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="/css/container.css">
+    <link rel="stylesheet" href="../css/container.css">
 </head>
 <body>
     <section class="displayLogin">
         <h2>Cadastro de Turma</h2>
-        <form class="styleForms">
+        <form class="styleForms" id="turmaForm">
             <div class="inputDivLogin">
-                <label for="emailLogin">Nome da Turma: </label><br>
-                <input type="text" name="emailLogin" id="emailLogin">
+                <label for="nomeTurma">Nome da Turma: </label><br>
+                <input type="text" name="nomeTurma" id="nomeTurma">
             </div>
-            <a href="principal.html"><input id="loginButton" type="button" value="Cadastrar"></a> 
+            <input id="loginButton" type="submit" value="Cadastrar">
         </form>
     </section>
+    <script src="../js/api.js"></script>
+    <script>
+        document.getElementById('turmaForm').addEventListener('submit', async (event) => {
+            event.preventDefault();
+            const nome = document.getElementById('nomeTurma').value;
+            try {
+                const result = await criarTurma(nome);
+                alert(result);
+                window.location.href = 'principal.html';
+            } catch (error) {
+                alert("Erro ao cadastrar turma");
+                console.error(error);
+            }
+        });
+    </script>
 </body>
 </html>
