--- a/front/login.html
+++ b/front/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body>
     <section class="displayLogin">
         <h2>Bem Vindo de Volta!</h2>
-        <form class="styleForms">
+        <form class="styleForms" id="loginForm">
             <div class="inputDivLogin">
                 <label for="emailLogin">E-mail: </label><br>
                 <input type="text" name="emailLogin" id="emailLogin">
@@ -23,8 +23,10 @@
                 <input type="checkbox" name="checkTerms" id="checkTerms">
                 <p>Aceito os <u>Termos de Uso</u> e <u>Privacidade</u></p>
             </div>
-            <a href="html/principal.html"><input id="loginButton" type="button" value="Entrar"></a>
+            <input id="loginButton" type="submit" value="Entrar">
         </form>
     </section>
+    <script src="js/api.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
